--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -35,3 +35,12 @@
   text-align: center;
   font-size: 12px;
   }
+  .btnlogin{
+    cursor: pointer;
+    font-size: large;
+    padding-right:5px;
+    
+  }
+  .shoppingcart{
+    cursor: pointer;
+  }
