--- a/src/Components/Products/Products.css
+++ b/src/Components/Products/Products.css
@@ -1,3 +1,77 @@
 .productitem :hover{
     box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
 }
+.loading {
+    width: 100px;
+    height: 100px;
+    transform: translate(-50%, -50%);
+    position: absolute; 
+    top: 50%; 
+    left: 50%;
+  }
+ .loading span {
+    display: block;
+    position: absolute;
+    width: 40%;
+    height: 40%;
+    border-radius: 50%;
+    box-shadow: 2px 2px 3px rgba(0,0,0,.4);
+    -webkit-animation: run 2s infinite ease-in-out;
+    animation: run 2s infinite ease-in-out;
+  }
+  
+  .loading .one {
+    background: #F3B222;
+    -webkit-animation-delay: 1.5s;
+    animation-delay: 1.5s;
+  }
+  .loading .two {
+    background: #F0653E;
+    -webkit-animation-delay: 1s;
+    animation-delay: 1s;
+  }
+  .loading .three {
+    background: #B9C0C0;
+    -webkit-animation-delay: 0.5s;
+    animation-delay: 0.5s;
+  }
+ .loading .four {
+    background: #8F7473;
+  }
+  
+  @-webkit-keyframes run {
+    0% {
+      transform: translate(0%);
+      border-radius: 50%;
+    }
+    25% {
+      transform: translate(150%) scale(0.5); 
+      border-radius: 0%;
+    }
+    50% {
+      transform: translate(150%, 150%);
+      border-radius: 50%; 
+    }
+    75% {
+      transform: translate(0%, 150%) scale(0.5); 
+      border-radius: 0%;
+    }
+  }
+  @keyframes run {
+    0% {
+      transform: translate(0%);
+      border-radius: 50%;
+    }
+    25% {
+      transform: translate(150%) scale(0.5); 
+      border-radius: 0%;
+    }
+    50% {
+      transform: translate(150%, 150%);
+      border-radius: 50%; 
+    }
+    75% {
+      transform: translate(0%, 150%) scale(0.5); 
+      border-radius: 0%;
+    }
+  }
