--- a/src/Components/Slider/slidercss.css
+++ b/src/Components/Slider/slidercss.css
@@ -1,6 +1,6 @@
 .slide-container {
   width: 100%;
-  height: 800px;
+  height: 650px;
   position: relative;
   text-align: center;
   box-sizing: border-box;
@@ -18,7 +18,7 @@
   .slide{
     position: relative;
   }
-.content1 ,.content3, .content4 {
+.content1 ,.content3{
   position: absolute;
   top: 250px;
   font-size: 30px;
@@ -26,7 +26,7 @@
   text-align: left;
   color: #5F093D;
 }
-.content2{
+.content2 ,.content4 {
   position: absolute;
   top: 250px;
   font-size: 30px;
