--- a/src/Components/Slider/slidercss.css
+++ b/src/Components/Slider/slidercss.css
@@ -4,11 +4,13 @@
   position: relative;
   text-align: center;
   box-sizing: border-box;
+  background-color: #5F093D;
   overflow: hidden;
 }
-.image-container{
+.each-fade{
     width: 100%;
-    
+    height: 600px;
+    background-color: #A890BE;
 }
 
 .img{
@@ -39,7 +41,6 @@
 
 /** button*/
 button{
- 
   position: relative;
   color: var(--c);
   font-size: 16px;
@@ -104,4 +105,18 @@ button span:nth-child(4) {
 }
 .btn4{
   --c:#A890BE;
+}
+
+@media (max-width:720px) {
+  .slide-container{
+    height:400px ;
+  }
+  .each-fade{
+    height: 300px;
+  }
+  .img{
+    height: 500px;
+  }
+  
+
 }
